# gcblueengine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  resource.h  run.bat  分类.txt
dbeditor/: AirCalculationControl.h  BasePanel.cpp  BasePanel.h  BaseViewer.cpp  BaseViewer.h  BitfieldControl.cpp  BitfieldControl.h  CMakeLists.txt  CheckBoxControl.cpp  CheckBoxControl.h  ComboEditControl.cpp  ComboEditControl.h  DatabaseExport.cpp  DatabaseExport.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseObjectPanel.cpp  DatabaseObjectPanel.h  DatePickerDialog.cpp  DatePickerDialog.h  ECMEvaluationDialog.cpp  ECMEvaluationDialog.h  EditControl.cpp  EditControl.h  FilterDialog.cpp  FilterDialog.h  GameEngineInit.cpp  GridPanel.cpp  GridPanel.h  ListSelectDialog.cpp  ListSelectDialog.h  MissileCalculationControl.h  NumberEditControl.cpp  NumberEditControl.h  PlatformSelectPanel.cpp  PlatformSelectPanel.h  RadarCalculationControl.cpp  RadarCalculationControl.h  RenamePlatformDialog.cpp  RenamePlatformDialog.h  (+18 more)
dbeditor/database/: atmosphere.csv
include/: stdwx.h
include/ai/: BlackboardInterface.h  Brain.h  ScriptedTask.h  ScriptedTaskInterface.h  tcAttackMission.h  tcMissionManager.h
include/common/: gctypes.h  math_constants.h  nsNav.h  simmath.h  tcOptions.h  tcStream.h
include/database/: md5.h  tcAcousticModel.h  tcAirDBObject.h  tcAirDetectionDBObject.h  tcBallisticDBObject.h  tcBallisticMissileDBObject.h  tcCounterMeasureDBObject.h  tcCountryNameChanges.h  tcDBMapSerializerSql.h  tcDBObjSerializer.h  tcDBString.h  tcDamageEffect.h  tcDatabase.h  tcDatabaseObject.h  tcDatabaseTable.h  tcECMDBObject.h  tcFlightportDBObject.h  tcFuelTankDBObject.h  tcItemDBObject.h  tcJetDBObject.h  tcLauncherDBObject.h  tcMissileDBObject.h  tcOpticalDBObject.h  tcPlatformDBObject.h  tcRadarDBObject.h  tcSensorDBObject.h  tcSensorPlatformDBObject.h  tcShipDBObject.h  tcSignatureModel.h  tcSimpleAirDBObject.h  tcSonarDBObject.h  tcSonobuoyDBObject.h  tcSpaceDBObject.h  tcStoresDBObject.h  tcSubDBObject.h  tcTableObject.h  tcTorpedoDBObject.h  tcWaterDetectionDBObject.h  tcWeaponDBObject.h
include/game/: Game.h
include/graphics/: tcGeometry.h
include/network/: tcAuthenticationMessageHandler.h  tcConnectionData.h  tcControlMessageHandler.h  tcMessage.h  tcMessageHandler.h  tcMultiplayerInterface.h  (+3 more)
scripts/: AI.py  AirManagement.py  Amram_AI_Scripts.py  Landing.py
src/: stdwx.cpp
src/app/: CMakeLists.txt  main.cpp
src/gcb/: CMakeLists.txt
src/gcb/ai/: Blackboard.cpp  BlackboardInterface.cpp  BlackboardItem.cpp  Brain.cpp  Nav.cpp  PointDefense.cpp  Route.cpp  ScriptedTask.cpp  SelfPreservation.cpp  Task.cpp  tcAttackMission.cpp  tcCAPMission.cpp  tcMission.cpp  tcMissionManager.cpp
src/gcb/common/: nsNav.cpp  simmath.cpp  tcFile.cpp  tcOptions.cpp  tcStream.cpp  tinyxml2.cpp  util.cpp
src/gcb/database/: CsvTranslator.cpp  tcAccountDatabase.cpp  tcAcousticModel.cpp  tcAirDBObject.cpp  tcAirDetectionDBObject.cpp  tcBallisticDBObject.cpp  tcBallisticMissileDBObject.cpp  tcCommDeviceDBObject.cpp  tcCommPlatformDBObject.cpp  tcComponentDBObject.cpp  tcCounterMeasureDBObject.cpp  tcDBString.cpp  tcDamageEffect.cpp  tcDatabase.cpp  tcDatabaseIterator.cpp  tcDatabaseObject.cpp  tcECMDBObject.cpp  tcESMDBObject.cpp  tcFlightportDBObject.cpp  tcFuelTankDBObject.cpp  tcGroundDBObject.cpp  tcItemDBObject.cpp  tcJetDBObject.cpp  tcLauncherDBObject.cpp  tcLoadoutData.cpp  tcMissileDBObject.cpp  tcOpticalDBObject.cpp  tcPlatformDBObject.cpp  tcRadarDBObject.cpp  tcSensorDBObject.cpp  tcSensorPlatformDBObject.cpp  tcShipDBObject.cpp  tcSignatureModel.cpp  tcSimpleAirDBObject.cpp  tcSonarDBObject.cpp  tcSonobuoyDBObject.cpp  tcSpaceDBObject.cpp  tcSqlReader.cpp  tcStoresDBObject.cpp  tcSubDBObject.cpp  (+5 more)
src/gcb/graphics/: tcEventManager.cpp  tcOBBBoundingBox.cpp
src/gcb/network/: Exception.cpp  Socket.cpp  SocketTCPBase.cpp  SocketTCPClient.cpp  SocketTCPServer.cpp  SocketUDP.cpp  tcAuthenticationMessageHandler.cpp  tcConnectionData.cpp  tcControlMessageHandler.cpp  tcMessage.cpp  tcMultiplayerInterface.cpp  tcNetworkInterface.cpp  tcTextMessageHandler.cpp  tcUpdateMessageHandler.cpp
src/gcb/sim/: tcAero.cpp  tcAeroAirObject.cpp  tcAirCM.cpp  tcAirObject.cpp  tcAirfieldObject.cpp  tcAllianceSensorMap.cpp  tcBallisticMissile.cpp  tcBallisticWeapon.cpp  tcCarrierObject.cpp  tcCommDevice.cpp  tcCommPlatform.cpp  tcCommandObject.cpp  tcCommandQueue.cpp  tcComponent.cpp  tcControllableObject.cpp  tcDamageModel.cpp  tcDateTime.cpp  tcDemTileReader.cpp  tcECM.cpp  tcESMSensor.cpp  tcEngagementData.cpp  tcFlightOpsObject.cpp  tcFlightPort.cpp  tcFormation.cpp  tcGameObjIterator.cpp  tcGameObject.cpp  tcGameSerializer.cpp  tcGeoTiffReader.cpp  tcGoal.cpp  tcGoalTracker.cpp  tcGroundObject.cpp  tcGroundVehicleObject.cpp  tcGuidedBomb.cpp  tcHeloObject.cpp  tcLOS.cpp  tcLauncher.cpp  tcLauncherState.cpp  tcMapData.cpp  tcMissileObject.cpp  tcOpticalSensor.cpp  (+28 more)
src/gcb/sqlite/: sqlite3x_connection.cpp  sqlite3x_reader.cpp
src/pygame/: CMakeLists.txt  tcGamePythonBind.cpp
src/pygcb/: CMakeLists.txt  tcBallisticMissileDBObjectPythonBind.cpp  tcDBObjectPythonBind.cpp  tcDamageDBObjectPythonBind.cpp  tcDatabaseInterface.cpp  tcDatabasePythonBind.cpp  tcFlightPortInterface.cpp  tcFlightPortPythonBind.cpp  tcGameInterface.cpp1  tcGoalPythonBind.cpp  tcGroupInterface.cpp  tcMissileDBObjectPythonBind.cpp  tcMissionInterface.cpp  tcPlatformDBInterface.cpp  tcPlatformDBInterfacePythonBind.cpp  tcPlatformDBObjectPythonBind.cpp  tcPlatformInterface.cpp  tcPlatformInterfacePythonBind.cpp  tcPlatformPythonBind.cpp  tcPythonBind.cpp  tcPythonExecutorAdapter.cpp  tcPythonInterface.cpp  tcScenarioInterface.cpp  tcScenarioPythonBind.cpp  tcScriptedTaskInterface.cpp  tcSensorDBObjectPythonBind.cpp  tcShipDBObjectPythonBind.cpp  tcSimPythonInterface.cpp  tcSonobuoyDBObjectPythonBind.cpp  tcSpaceDBObjectPythonBind.cpp  tcStringTable.cpp  tcSubDBObjectPythonBind.cpp  tcSubInterface.cpp  tcTorpedoDBObjectPythonBind.cpp  tcTrackInterface.cpp  tcTrackPythonBind.cpp  tcWeaponInterface.cpp
xml/: options.xml
(+10712 files in other folders)
